ckad/on-prem-to-pod-custom-tcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-echo-internal
  labels:
    app: tcp-echo
    system: example
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tcp-echo-internal
  template:
    metadata:
      labels:
        app: tcp-echo-internal
        system: example
    spec:
      containers:
        - name: tcp-echo-container
          image: cjimti/go-echo:latest
          imagePullPolicy: Always
          ports:
            - name: tcp-echo-port
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo-internal
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: tcp-echo-internal
  sessionAffinity: None
  type: LoadBalancer
